grammars/pythonParser.g4
parser grammar pythonParser;

// ==================== HEADER ====================

options {
	tokenVocab = pythonLexer;
}

@header {
   package antlr.gen.python;
}

// Virtual tokens for indentation (generated by DenterHelper)
tokens {
	INDENT,
	DEDENT
}

// ==================== ROOT ====================
// (testREE=tree |TESTX= x)*

// Program is a list of statements
root: NL* (statement NL*)* EOF;

// ==================== STATEMENTS ====================

// Statements can be assignments, print, if-statements, imports, or expressions
statement:
	importHeader		# ImportStatement
	| assignment		# AssignStatement
	| printAction		# PrintStatement
	| returnStatement	# ReturnStmt
	| ifStatement		# IfStmt
	| forStatement		# ForStmt
	| whileStatement	# WhileStmt
	| breakStatement	# BreakStmt
	| continueStatement	# ContinueStmt
	| classDefinition	# ClassDefStatement
	| functionDef		# FunctionDefStatement
	| expr				# ExprStatement;

// Return statement (with optional expression)
returnStatement: RETURN expr?;

// Import statement (Python-style: from X import Y, Z) Example: from flask import Flask,
// render_template, request
importHeader:
	FROM module = NAME IMPORT importedClasses (
		COMMA importedClasses
	)*;
importedClasses: NAME;

// Assignment statement (supports: x=5, obj.prop=5, list[0]=5)
assignment: target = expr ASSIGN value = expr;

// Print statement
printAction: PRINT LPAREN expr RPAREN;

// Block of statements (used in if/elif/else)
block: (statement NL*)+;

// ==================== CONTROL FLOW ====================

// If-elif-else statement with Python-style indentation Uses INDENT/DEDENT virtual tokens for block
// structure
ifStatement:
	IF condition COLON INDENT block DEDENT (
		ELIF condition COLON INDENT block DEDENT
	)* (ELSE COLON INDENT block DEDENT)?;

// For loop: for x in collection:
forStatement:
	FOR target = NAME IN iterable = expr COLON INDENT block DEDENT;

// While loop: while condition:
whileStatement:
	WHILE condition COLON INDENT block DEDENT;

// Break statement
breakStatement: BREAK;

// Continue statement
continueStatement: CONTINUE;

// ==================== CONDITIONS ====================

// Condition expressions (boolean logic)
condition:
	left = condition op = AND right = condition		# AndCondition
	| left = condition op = OR right = condition	# OrCondition
	| NOT condition									# NotCondition
	| LPAREN condition RPAREN						# ParenCondition
	| left = expr op = comparisonOp right = expr	# CompareCondition
	| TRUE											# TrueCondition
	| FALSE											# FalseCondition
	| expr                                          # TruthyCondition;

// Comparison operators (==, !=, <, >, <=, >=)
comparisonOp: EQ | NEQ | LT | GT | LTE | GTE;

// ==================== DEFINITIONS ====================

// Decorator (e.g., @app.route("/"))
// Each decorator is on its own line, so NL follows the expression
decorator: AT expr NL;

// Class definition
classDefinition:
	decorator* CLASS name = NAME COLON INDENT block DEDENT;

// Function definition
functionDef:
	decorator* DEF NAME LPAREN parameters = params? RPAREN COLON INDENT block DEDENT;

// Function parameters
params:
	regularParams // regular params
	(starParam)? // *args or bare *
	(kwOnlyParams)? // keyword-only params
	(kwargsParam)?; // **kwargs

regularParams: kwParam (COMMA kwParam)*;
starParam: COMMA STAR starArgs = NAME?;
kwOnlyParams: (COMMA kwParam)+;
kwargsParam: COMMA POW kwargs = NAME;
kwParam: name = NAME (ASSIGN defaultVal = expr)?;

// ==================== DATA STRUCTURES ====================

// List literal: [1, 2, 3] or [1, 2, 3,] (trailing comma allowed) Supports multiline lists with
// newlines
list:
	lbrack = LBRACK (
		NL* expr (NL* COMMA NL* expr)* NL* trcomma = COMMA? NL*
	)? rbrack = RBRACK;

// Dictionary literal: {key: value, ...} (trailing comma allowed) Supports multiline dictionaries
// with newlines
dict:
	LBRACE (
		NL* dictEntry (NL* COMMA NL* dictEntry)* NL* COMMA? NL*
	)? RBRACE;

// Dictionary entry (key-value pair)
dictEntry: key = expr COLON value = expr;

// List comprehension: [expr for x in collection] or [expr for x in collection if condition]
listComprehension:
	LBRACK element = expr FOR target = NAME IN iterable = expr (
		IF filterCondition = condition
	)? RBRACK;

// Function call argument (positional or keyword)
argument: (name = NAME ASSIGN)? value = expr;

// ==================== EXPRESSIONS (Precedence: lowest -> highest) ====================

// Entry point for all expressions
expr: additiveExpr;

// Level 1: Addition and Subtraction (lowest precedence)
additiveExpr:
	left = additiveExpr op = PLUS right = multiplicativeExpr	# SUM_SUB_OP
	| left = additiveExpr op = SUB right = multiplicativeExpr	# SUM_SUB_OP
	| multiplicativeExpr										# AdditivePassThrough;

// Level 2: Multiplication and Division
multiplicativeExpr:
	left = multiplicativeExpr op = STAR right = powerExpr	# MUL_DIV_OP
	| left = multiplicativeExpr op = DIV right = powerExpr	# MUL_DIV_OP
	| powerExpr												# MultiplicativePassThrough;

// Level 3: Exponentiation (right-associative: 2**3**2 = 2**(3**2))
powerExpr:
	<assoc = right> base = postfixExpr op = POW exp = powerExpr	# EXPONENT_OP
	| postfixExpr												# PowerPassThrough;

// Level 4: Postfix operators (member access, indexing, calls)
postfixExpr:
	callee = postfixExpr LPAREN (argument (COMMA argument)*)? RPAREN	# CallExpr
	| object = postfixExpr DOT property = NAME							# DotAccessExpr
	| container = postfixExpr LBRACK key = expr RBRACK					# INDEX_ACCESS
	| primaryExpr														# PostfixPassThrough;

// Level 5: Primary expressions (highest precedence - atoms)
primaryExpr:
	(int = NUM | double = DOUBLE)	# NUM
	| STRING						# STRING_LITERAL
	| TRUE							# TrueLiteral
	| FALSE							# FalseLiteral
	| NONE							# NoneLiteral
	| NAME							# VAR
	| list							# ListExpr
	| dict							# DICTIONARY
	| listComprehension				# ListCompExpr
	| LPAREN expr RPAREN			# ParenExpr;
